--- a/elements.html
+++ b/elements.html
@@ -9,9 +9,9 @@
 		<title>Elements - Alpha by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 8]><script src="html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="ie8.css" /><![endif]-->
 	</head>
 	<body>
 		<div id="page-wrapper">
@@ -427,28 +427,28 @@
 								<section class="box">
 									<h3>Image</h3>
 									<h4>Fit</h4>
-									<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+									<span class="image fit"><img src="pic04.jpg" alt="" /></span>
 									<div class="box alt">
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
 										</div>
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
 										</div>
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="pic04.jpg" alt="" /></span></div>
 										</div>
 									</div>
 
 									<h4>Left &amp; Right</h4>
-									<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-									<p><span class="image right"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+									<p><span class="image left"><img src="pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+									<p><span class="image right"><img src="pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 								</section>
 
 						</div>
@@ -473,13 +473,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="jquery.dropotron.min.js"></script>
+			<script src="jquery.scrollgress.min.js"></script>
+			<script src="skel.min.js"></script>
+			<script src="util.js"></script>
+			<!--[if lte IE 8]><script src="respond.min.js"></script><![endif]-->
+			<script src="main.js"></script>
 
 	</body>
 </html>
